2004-08-08  Pascal Obry  <pascal@obry.org>

	* test_speed.adb:
	(Check_Computer_Speed): Adjust speed factor.

2004-07-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zbig.adb:
	Close zlib stream after use.

2004-07-11  Pascal Obry  <pascal@obry.org>

	* README.txt:
	Initial revision.

	* wsdl_6.java:
	Fix test to match the one in the Ada part.
	Update comments about the procedure to use this test.
	Update copyright notice.

	* wsdl_6_main.adb, wsdl_6.out:
	Output adjusted to the Java one.

2004-07-10  Pascal Obry  <pascal@obry.org>

	* makefile:
	(RT_SOAP): Add soap7.

	* soap7.adb, soap7.out:
	Initial revision.

2004-07-10  Pascal Obry  <pascal@obry.org>

	* makefile:
	(RT_SOAP): Add soap6.

	* soap6.adb, soap6.out:
	Initial revision.

2004-06-28  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* sp.adb, ssp.adb, sp_pck.ads, sp_pck.adb:
	Move server start to the common code.

	* sp_pck.ads, sp_pck.adb:
	Rename Client_Process to Run. Move all except Run from spec to body.
	Move all possible objects from library level to level of routines
	 CB and Run.
	Remove some withes.

	* sp.adb, ssp.adb:
	Call SP_Pack.Run instead of Client_Process.

2004-06-27  Pascal Obry  <pascal@obry.org>

	* datafeed_service.adb:
	Remove error server logs.

2004-06-27  Pascal Obry  <pascal@obry.org>

	* makefile:
	(WSDL_TESTS): Add datafeed_service.

	* datafeed_service.adb, datafeed_service.out, datafeed_service.wsdl:
	Initial revision.

2004-06-24  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* auth.adb, head.adb, moved.adb, strm.adb, strm2.adb, tclientto.adb,
	  unexph.adb, unexph2.adb, xmlt_proc.adb, sp_pck.adb:
	Fixes related to new timeout type Duration.

2004-06-22  Pascal Obry  <pascal@obry.org>

	* xmlt_proc.adb:
	Catch XML_Fatal_Error to conform to new XML/Ada implementation.

2004-06-21  Pascal Obry  <pascal@obry.org>

	* tmem.adb:
	Add header and CVS tag.

	* tmime.adb, ctab.adb:
	Minor reformatting.

2004-06-20  Pascal Obry  <pascal@obry.org>

	* sto.adb, ssto.adb:
	Use Get_Free_Port.